--- a/sections/throne--home-collection.liquid
+++ b/sections/throne--home-collection.liquid
@@ -216,7 +216,7 @@
 <script>// console.log({{ shop.metaobjects.fabric_colors.values | json }});
 </script>{% schema %}
 {
-  "name": "Homepage Collection",
+  "name": "SH Homepage Collection",
   "tag": "section",
   "class": "section",
   "disabled_on": {
@@ -231,7 +231,7 @@
   ],
   "presets": [
     {
-      "name": "Homepage Collection"
+      "name": "SH Homepage Collection"
     }
   ]
 }
